<resources>
    <string name="app_name">Snapp-LK</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="get_location_one_time">Get location one time</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="provider">Provider</string>
    <string name="bearing">Bearing</string>
    <string name="speed">Speed</string>
    <string name="mock_location">Mock Location</string>
    <string name="real_location">Real Location</string>
    <string name="started">Started</string>
    <string name="stopped">Stopped</string>
    <string name="location_type">Location Type</string>
    <string name="location_service">Location Service</string>
    <string name="zero">0.0</string>
    <string name="dash">--</string>
</resources>